--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -2,10 +2,7 @@
     background-color: rgb(0, 59, 92);
     font-family: 'Courier New', Courier, monospace;
 }
-h1{
-    line-height: 70px;
-    font-family: 'Times New Roman', Times, serif;
-} 
+
 
 #minerva{
     width: 80px;
@@ -32,6 +29,70 @@ h1{
     width: 200px;   
     margin-top: 20px;
 }
+
+#botones_desp{
+    background-color: rgb(68, 160, 221);
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+    line-height: 20px;
+    width: 200px;   
+    margin-top: 20px;
+}
+
+.contenedoruno{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contenedordos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grupo-boton{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.txt-title{
+    text-align: center;
+    padding: 0.75em 0;
+    letter-spacing: 0.075rem;
+    line-height: 1.25;
+    text-shadow: #333 2px 2px 2px;
+    color: white;
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 600;
+    font-style:normal;
+    font-size: clamp(1rem, -0.875rem + 8.333vw, 2.5rem);
+}
+
+.hr1{
+    border-left: thick solid rgba(0, 0, 0, 0.05);
+    height:72.5vh;
+    left: 38%;
+    width: 0.5vh;
+    position: absolute;
+    top: 34.5%;
+    transform: translateY(-20%);
+   }
+
+.hr2{
+    border-left: thick solid rgba(0, 0, 0, 0.05);
+    height:72.5vh;
+    right: 38%;
+    width: 0.5vh;
+    position: absolute;
+    top: 34.5%;
+    transform: translateY(-20%);
+}
+
 
 html, body {
     height: 100%;
