--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -4,12 +4,12 @@
 }
 
 
-#minerva{
+.minerva{
     width: 80px;
     height: 80px;
 }
 
-#lns-logo{
+.lns-logo{
     width: 162px;
     height: 64px;
 }
