Cambios a nueva rama

--- a/css_estilos/pantalla.css
+++ b/css_estilos/pantalla.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     height: 100%;
 }
 body {
@@ -20,4 +20,4 @@ footer {
     writing-mode: vertical-rl;
     transform: rotate(180deg);
     white-space: nowrap;
-}
+} */
