--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -1,144 +1,164 @@
 #banner {
     background-color: rgb(0, 59, 92);
-    height: 15%;
-    width: 100%;
-    position: static;
-    box-shadow: 5px 5px 20px rgba(53, 71, 82, 0.381);
-    z-index: 1;
+    height          : 15%;
+    width           : 100%;
+    position        : static;
+    box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
+    z-index         : 2;
 }
 
 .banner2{
-    z-index: 2 !important;
+    background-color: rgb(213, 217, 219);
+    height: 8%;
+    width: 100%;
+    position: absolute;
+    box-shadow: 5px 5px 20px rgba(53, 71, 82, 0.381);
+    padding: 10px;
+    z-index: 1;
+    top: 15%;
 }
 
 .minerva{
-    width: 80px;
-    height: 80px;
+    width   : 80px;
+    height  : 80px;
     position:absolute;
-    right: 1%;
-    top: 3%;
+    right   : 1%;
+    top     : 3%;
 }
 
 .lns-logo{
-    width: 170px;
-    height: 60px;
+    width   : 170px;
+    height  : 60px;
     position:absolute;
-    left: 1%;
-    top: 3.5%;
-}
-
-
-
-@media only screen and (max-width: 700px){
-    #lns-logo{
-        width:140px;
-        height: 60;
-    }
-}
-
-#botones{
-    background-color: rgb(0, 181, 226);
-    color: rgb(255, 255, 255);
-    margin-top: 10px;
-    line-height: 20px;
-    width: 200px;   
-    margin-top: 20px;
+    left    : 1%;
+    top     : 3.5%;
 }
 
 #botones_desp{
     background-color: rgb(68, 160, 221);
-    color: rgb(255, 255, 255);
-    margin-top: 10px;
-    line-height: 20px;
-    width: 200px;   
-    margin-top: 20px;
+    color           : rgb(255, 255, 255);
+    margin-top      : 10px;
+    line-height     : 20px;
+    width           : 200px;
+    height          : 60px;   
+    margin-top      : 20px;
+    margin-bottom   : 20px;
+    align-content   : center;
 }
 
 .contenedoruno{
     
-    display: flex;
-    flex-direction: column;
+    display        : flex;
+    flex-direction : column;
     justify-content: center;
-    align-items: center;
+    align-items    : center;
 }
 
 .contenedordos{
-    display: flex;
+    display       : flex;
     flex-direction: column;
-    align-items: center;
+    align-items   : center;
 }
 
 .grupo-boton{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display        : flex;
+    flex-direction : column;
+    align-items    : center;
     justify-content: center;
 }
 
 .txt-title{
-    text-align: center;
-    padding: 0.75em 0;
+    text-align    : center;
+    padding       : 0.75em 0;
     letter-spacing: 0.075rem;
-    line-height: 1.25;
-    text-shadow: #333 2px 2px 2px;
-    color: #ffffff;
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 600;
-    font-style:normal;
-    font-size: clamp(1rem, -0.875rem + 8.333vw, 2.5rem);
+    line-height   : 1.25;
+    color         : rgb(0, 59, 92);
+    font-family   : "Roboto Condensed", sans-serif;
+    font-weight   : 900 !important;
+    font-style    : normal;
+    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);
     
 }
 
 .sub-title{
-    text-align: center;
-    padding: 0.75em 0;
+    text-align    : center;
+    padding       : 0.75em 0;
     letter-spacing: 0.075rem;
-    line-height: 1.25;
-    /* text-shadow: #333 2px 2px 2px; */
-    color: rgb(0, 59, 92);
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 600;
-    font-style:normal;
-    font-size: clamp(1rem, -0.875rem + 8.333vw, 1.7rem);
+    line-height   : 1.25;
+    color         : rgb(0, 59, 92);
+    font-family   : "Roboto Condensed", sans-serif;
+    font-weight   : 300;
+    font-style    : normal;
+    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);
     
 }
 
 .hr1{
-    border-left: thick solid rgba(0, 0, 0,0.05);
-    height:75.1vh;
-    left: 38%;
-    width: 0.5vh;
-    position: absolute;
-    top: 32.3%;
-    transform: translateY(-20%);
+    border-left: thick solid rgba(0, 0, 0, 0.13);
+    height     : 79vh;
+    left       : 38%;
+    width      : 0.5vh;
+    position   : absolute;
+    top        : 28.3%;
+    transform  : translateY(-20%);
    }
 
 .hr2{
-    border-left: thick solid rgba(0, 0, 0, 0.05);
-    height:75.1vh;
-    right: 38%;
-    width: 0.5vh;
-    position: absolute;
-    top: 32.3%;
-    transform: translateY(-20%);
+    border-left: thick solid rgba(0, 0, 0, 0.13);
+    height     : 79vh;
+    right      : 38%;
+    width      : 0.5vh;
+    position   : absolute;
+    top        : 28.3%;
+    transform  : translateY(-20%);
 }
 
+/*  Esto es para mover el boton de cerrar sesion */
+.cerrar-sesion{
+    width         : 15%;
+    height        : 60%;
+    position      : static;
+    transform     : translateX(440%);
+}
+ /*Esto es para editar el contenido del boton de cerrar sesion*/
+#cerrar-sesion{
+    background-color: rgb(68, 160, 221);
+    color           : rgb(255, 255, 255);
+    width           : 200px;  
+}
+
+#botones-lat{
+    position        : absolute;
+    font-size       : 85%;
+    background-color: rgb(68, 160, 221);
+    color           : rgb(255, 255, 255);
+    width           : 120px;
+    padding         : 8px;
+    border          : 3px;
+    margin          : 1px;
+    right           : 1%;
+}
 
 html, body {
     height: 100%;
 }
 body {
-    display: flex;
-    flex-direction: column;
+    display         : flex;
+    flex-direction  : column;
     background-color: #F2F2F2;
 }
 .content {
     flex: 1 0 auto;
+    position: absolute;
+    width: 100%;
+    top: 24%;
 }
 
-.footer {
-    color: #F2F2F2 !important;
+footer {
+    color           : #F2F2F2 !important;
     background-color: #242424;
-    font: 14px Karla, Sans-Serif;
-
+    font            : 14px Karla, Sans-Serif;
+    position        : absolute;
+    width           : 100%;
+    top             : 480%;
 }
