--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -8,12 +8,15 @@
 }
 
 .banner2{
-    display    : flex;
-    align-items: center;
-    position   : static;
-    width      : 100%;
-    height     : 8%;
+    display: flex;
+    position: static;
+    max-width: 100%;
+    height: 60px;
     z-index: 2;
+    background-color: #616161 !important;
+    justify-content: right;
+    align-items: center;
+    
 }
 
 .minerva{
@@ -111,21 +114,16 @@
 
 /*  Esto es para mover el boton de cerrar sesion */
 .cerrar-sesion{
-    width         : 10%;
-    height        : 60%;
-    position      : static;
-    transform     : translateX(440%);
+    width: 100px;
+    height: 40px;
+    position: absolute;
+    background-color: rgb(68, 160, 221);
+    color: rgb(255, 255, 255);
+    right: 1em;             
+
 }
  /*Esto es para editar el contenido del boton de cerrar sesion*/
-#cerrar-sesion{
-    background-color: rgb(68, 160, 221);
-    color           : rgb(255, 255, 255);
-    width           : 300px;  
-}
 
-html, body {
-    height: 100%;
-}
 body {
     display         : flex;
     flex-direction  : column;
@@ -149,12 +147,6 @@ body {
         height: 60;
     }
 
-    .cerrar-sesion{
-        width         : 20%;
-        height        : 60%;
-        position      : static;
-        transform     : translateX(200%);
-    }
 }
 
 @media only screen and (max-width: 600px){
@@ -167,12 +159,6 @@ body {
         top     : 20%;
     }
 
-    .cerrar-sesion{
-        width         : 45%;
-        height        : 80%;
-        position      : static;
-        transform     : translateX(62%);
-    }
 
     #banner {
         background-color: rgb(0, 59, 92);
@@ -188,4 +174,66 @@ body {
         z-index: 3;
         margin-top: 25%;
     }
+}
+
+
+/*Evadiendo estilos de Bootstrap sobrepuestos*/
+@media (max-width: 1350px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: aqua;
+    }
+
+    html, body {
+        height: 100% !important;
+    }
+    
+}
+
+@media (max-width: 580px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: rgb(60, 0, 255);
+    }
+
+    html, body {
+        height: 110% !important;
+    }
+    
+}
+
+@media (max-width: 450px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: rgb(0, 255, 76);
+    }
+
+    html, body {
+        height: 120% !important;
+    }
+    
+}
+
+@media (max-width: 170px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: rgb(255, 106, 0);
+    }
+
+    html, body {
+        height: 130% !important;
+    }
+    
 }
