--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -1,21 +1,48 @@
+
+
+.txt-title{
+    text-align    : center;
+    padding       : 1.75em 0;
+    letter-spacing: 0.075rem;
+    line-height   : 1.25;
+    color         : rgb(0, 59, 92);
+    font-family   : "Roboto Condensed", sans-serif;
+    font-weight   : 600;
+    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);  
+}
+
+
+.sub-title{
+    text-align    : center;
+    padding       : 0.75em 0;
+    letter-spacing: 0.075rem;
+    line-height   : 1.25;
+    color         : #616161;
+    font-family   : "Roboto ligth", sans-serif;
+    font-weight   : 600;
+    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
+    
+}
+
 #banner {
     background-color: rgb(0, 59, 92);
     height          : 15%;
     width           : 100%;
     position        : static;
     box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
-    z-index         : 2;
+    z-index         : 1;
 }
 
 .banner2{
-    background-color: rgb(213, 217, 219);
-    height: 8%;
-    width: 100%;
-    position: absolute;
-    box-shadow: 5px 5px 20px rgba(53, 71, 82, 0.381);
-    padding: 10px;
-    z-index: 1;
-    top: 15%;
+    display: flex;
+    position: static;
+    max-width: 100%;
+    height: 60px;
+    z-index: 2;
+    background-color: #616161 !important;
+    justify-content: right;
+    align-items: center;
+    
 }
 
 .minerva{
@@ -39,11 +66,10 @@
     color           : rgb(255, 255, 255);
     margin-top      : 10px;
     line-height     : 20px;
-    width           : 200px;
-    height          : 60px;   
+    width           : 200px;   
     margin-top      : 20px;
     margin-bottom   : 20px;
-    align-content   : center;
+    font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem); ;
 }
 
 .contenedoruno{
@@ -67,81 +93,52 @@
     justify-content: center;
 }
 
-.txt-title{
-    text-align    : center;
-    padding       : 0.75em 0;
-    letter-spacing: 0.075rem;
-    line-height   : 1.25;
-    color         : rgb(0, 59, 92);
-    font-family   : "Roboto Condensed", sans-serif;
-    font-weight   : 900 !important;
-    font-style    : normal;
-    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);
-    
-}
 
-.sub-title{
-    text-align    : center;
-    padding       : 0.75em 0;
-    letter-spacing: 0.075rem;
-    line-height   : 1.25;
-    color         : rgb(0, 59, 92);
-    font-family   : "Roboto Condensed", sans-serif;
-    font-weight   : 300;
-    font-style    : normal;
-    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);
-    
-}
 
 .hr1{
-    border-left: thick solid rgba(0, 0, 0, 0.13);
-    height     : 79vh;
+    border-left: thick solid rgba(0, 0, 0,0.05);
+    height     : 75.1vh;
     left       : 38%;
     width      : 0.5vh;
     position   : absolute;
-    top        : 28.3%;
+    top        : 32.3%;
     transform  : translateY(-20%);
    }
 
 .hr2{
-    border-left: thick solid rgba(0, 0, 0, 0.13);
-    height     : 79vh;
+    border-left: thick solid rgba(0, 0, 0, 0.05);
+    height     : 75.1vh;
     right      : 38%;
     width      : 0.5vh;
     position   : absolute;
-    top        : 28.3%;
+    top        : 32.3%;
     transform  : translateY(-20%);
 }
 
-/*  Esto es para mover el boton de cerrar sesion */
-.cerrar-sesion{
-    width         : 15%;
-    height        : 60%;
-    position      : static;
-    transform     : translateX(440%);
-}
- /*Esto es para editar el contenido del boton de cerrar sesion*/
-#cerrar-sesion{
-    background-color: rgb(68, 160, 221);
-    color           : rgb(255, 255, 255);
-    width           : 200px;  
-}
-
-#botones-lat{
-    position        : absolute;
-    font-size       : 85%;
-    background-color: rgb(68, 160, 221);
-    color           : rgb(255, 255, 255);
-    width           : 120px;
-    padding         : 8px;
-    border          : 3px;
-    margin          : 1px;
-    right           : 1%;
+/*Estilos del boton de cerrar sesion */
+.cerrar-sesion {
+    width: 140px;
+    height: 40px;
+    position: absolute;
+    background-color: #616161; 
+    color: rgb(255, 255, 255);
+    border: 2px solid white; 
+    text-align: center;
+    line-height: 18px;
+    text-decoration: none; 
+    font-size: 16px; 
+    border-radius: 5px; 
+    transition: background-color 0.3s ease, border-color 0.3s ease; /*Aplicamos transiciones suaves*/
+    margin: 0.7em;
 }
 
-html, body {
-    height: 100%;
+/* Estilos del botón cuando está en estado activo (clickeado) */
+.cerrar-sesion:hover {
+    background-color: #242424; 
+    border-color: white;
 }
+
+
 body {
     display         : flex;
     flex-direction  : column;
@@ -149,16 +146,85 @@ body {
 }
 .content {
     flex: 1 0 auto;
-    position: absolute;
-    width: 100%;
-    top: 24%;
+    z-index: 3;
 }
 
-footer {
+.footer {
     color           : #F2F2F2 !important;
     background-color: #242424;
     font            : 14px Karla, Sans-Serif;
-    position        : absolute;
-    width           : 100%;
-    top             : 480%;
+
+}
+
+
+
+
+
+
+/*Evadiendo estilos de Bootstrap sobrepuestos*/
+@media (max-width: 1600px) {
+
+    #lns-logo{
+        width :140px;
+        height: 60;
+    }
+
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: #E6E6E6;
+    }
+
+    html, body {
+        height: 100% !important;
+    }
+    
+     
+}
+
+@media (max-width: 580px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: rgb(60, 0, 255);
+    }
+
+    html, body {
+        height: 110% !important;
+    }
+    
+}
+
+@media (max-width: 450px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: rgb(0, 255, 76);
+    }
+
+    html, body {
+        height: 120% !important;
+    }
+    
+}
+
+@media (max-width: 170px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+    body{
+        background-color: rgb(255, 106, 0);
+    }
+
+    html, body {
+        height: 130% !important;
+    }
+    
 }
