--- a/mantenimientos/Historial_infraestructura/estilos.css
+++ b/mantenimientos/Historial_infraestructura/estilos.css
@@ -76,7 +76,7 @@ body {
     z-index: 3;
 }
 
-
+/* CODIGO PERTENECIENTE A LAS TABLA QUE MUESTRA EL HISTORIAL */
 .contenedortabla{
     width: 99.5%;
     height: 17%;
@@ -91,6 +91,7 @@ body {
     width: 100%;
     height: 70%;
     display: table;
+    text-align: center;
     background-color: aqua;
 }
 
@@ -98,8 +99,26 @@ body {
     width: 100%;
     height: 70%;
     display: table;
+    text-align: center;
     background-color: antiquewhite;
 }
+
+td{
+    position: static;
+    height: 65px;
+    vertical-align: middle;
+}
+
+th{
+    position: static;
+    height: 65px;
+    vertical-align: middle;
+}
+
+.dimensionar{
+    display: none;
+}
+/*---------------------------------------------------------------*/
 
 #tabla{
     height: 5.78vh;
@@ -125,6 +144,17 @@ body {
         height: 100% !important;
     }
 
+    .tablauno{
+        font-size: 14px;
+    }
+
+    .tablados{
+        font-size: 14px;
+        display: absolute;
+        
+        background-color: aquamarine;
+    }
+
     .contenedortabla{
         width: 99.5%;
         height: 25%;
@@ -134,12 +164,38 @@ body {
         grid-template-columns: 50% 50%;
         grid-template-rows: 50% 50%;
     }
-    
-    #tabla{
-        height: 5.78vh;
-        width: 10%;
+}
+
+@media (max-width: 1155px) {
+
+
+    .contenedortabla{
+        width                : 99.5%;
+        height               : 25%;
+        display              : grid;
+        margin-left          : 5px;
+        margin-right         : 5px;
+        grid-template-columns: 100%;
+        grid-template-rows   : 50% 50%;
+    }
+
+    .tablauno{
+        font-size: 12.45px;
+    }
+
+    .tablados{
+        font-size: 12.45px;
+        display  : none;/*SE OCULTA LA TABLA DE LA DERECHA*/
+        
+        background-color: aquamarine;
+    }
+
+    /*SE MUESTRA EL BOTON DE CAMBIAR VISTA*/
+    .dimensionar{
+        display:flex;
     }
 }
+
 
 @media (max-width: 730px) {
     .container, .container-sm {
