--- a/Registrar_usuario/estilos.css
+++ b/Registrar_usuario/estilos.css
@@ -10,7 +10,8 @@
     color: rgb(0, 59, 92);
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 500;
-    font-size: clamp(1rem, -0.875rem + 8.333vw, 1.7rem);
+    font-size: clamp(1rem, -0.875rem + 8.333vw, 1.9rem);
+    margin-top: -1em;
 }
 
 
@@ -19,6 +20,7 @@
     border-radius: 25px;
     padding: 2em;
 }
+
 .botones {
     display: inline-flex;
     justify-content: center;
@@ -28,7 +30,7 @@
     box-sizing: border-box;
     text-align: center;
     margin: 0.1em;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 .aling_btn{
     margin-left: -0.1em !important;
