--- a/mantenimientos/Historial_infraestructura/estilos.css
+++ b/mantenimientos/Historial_infraestructura/estilos.css
@@ -102,6 +102,34 @@ body {
     font-size       : 13px;
 }
 
+           /*PERTENECIENTE A ESTILOS DEL FORMULARIO*/
+.contenedorform{
+    width                : 99.5%;
+    height               : 17%;
+    display              : grid;
+    margin-left          : 5px;
+    margin-right         : 5px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows   : 50% 50%;
+}
+
+
+.formuno{
+    width           : 100%;
+    height          : 70%;
+    display         : table;
+    text-align      : center;
+}
+
+.formdos{
+    width           : 100%;
+    height          : 65%;
+    display         : table;
+    text-align      : center;
+    font-size       : 13px;
+}
+           /*-----------------------------------*/
+
 td{
     position      : static;
     height        : 65px;
@@ -168,7 +196,7 @@ th{
     }
 
     .tablados{
-        font-size       : 13px;
+        font-size: 13px;
     }
 
     .contenedortabla{
@@ -181,6 +209,24 @@ th{
         grid-template-rows   : 50% 50%;
     }
     /***********************************************************************/
+
+    .formuno{
+        font-size: 13px;
+    }
+
+    .formdos{
+        font-size: 13px;
+    }
+
+    .contenedorform{
+        width                : 99.5%;
+        height               : 25%;
+        display              : grid;
+        margin-left          : 5px;
+        margin-right         : 5px;
+        grid-template-columns: 50% 50%;
+        grid-template-rows   : 50% 50%;
+    }
 }
 
 @media (min-width: 1155px) {
@@ -256,6 +302,15 @@ th{
 
     }
 
+    .tablados{
+        font-size       : 12.45px;
+        width           : 98%;
+        height          : 20%;
+        display         : none;
+        text-align      : center;
+      
+    }
+
     td{
         position      : static;
         height        : 65px;
@@ -268,14 +323,7 @@ th{
         vertical-align: middle;
     }
 
-    .tablados{
-        font-size       : 12.45px;
-        width           : 98%;
-        height          : 20%;
-        display         : none;
-        text-align      : center;
-      
-    }
+  
     /*****************************************************/
 
     /*SE MUESTRA EL BOTON DE CAMBIAR VISTA*/
@@ -293,6 +341,35 @@ th{
         display         : flex;
     }
     /****************************************/
+
+
+    .contenedorform{
+        width                : 99.5%;
+        height               : 25%;
+        display              : grid;
+        margin-left          : 5px;
+        margin-right         : 5px;
+        grid-template-columns: 98%;
+        grid-template-rows   : 50% 50%;
+    }
+
+    .formuno{
+        font-size       : 11.45px;
+        width           : 99%;
+        height          : 70%;
+        display         : table;
+        text-align      : center;
+
+    }
+    
+    .formdos{
+        font-size       : 12.45px;
+        width           : 99%;
+        height          : 20%;
+        display         : table;
+        text-align      : center;
+      
+    }
 }
 
 
