--- a/mantenimientos/Entrada_infraestructura/estilos.css
+++ b/mantenimientos/Entrada_infraestructura/estilos.css
@@ -79,11 +79,19 @@ body {
 
            /*PERTENECIENTE A ESTILOS DEL FORMULARIO*/
 .contenedorform{
-    width: 100%;
-    height: 40% !important;
-    display: flex;
-    flex-direction: column;
+    width: 40%;
+    height: 80% !important;
+    position: absolute;
+    left: 30%;
     background-color: aqua;
+}
+
+.formprincipal{
+    width: 100%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    background-color: antiquewhite;
 }
 
 .row{
@@ -102,12 +110,7 @@ body {
     width: 43%;
 }
 
-.formprincipal{
-    width: 60%;
-    margin: 0 auto;
-    border-radius: 20px;
-    background-color: antiquewhite;
-}
+
            /*-----------------------------------*/
 
 
