--- a/mantenimientos/Entrada_infraestructura/estilos.css
+++ b/mantenimientos/Entrada_infraestructura/estilos.css
@@ -79,16 +79,19 @@ body {
 
            /*PERTENECIENTE A ESTILOS DEL FORMULARIO*/
 .contenedorform{
-    width: 40%;
-    height: 80% !important;
+    width: 98%;
+    height: 70% !important;
     position: absolute;
-    left: 30%;
+
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 50% 50%;
+
     background-color: aqua;
 }
 
 .formprincipal{
     width: 100%;
-    border-radius: 20px;
     display: flex;
     justify-content: center;
     background-color: antiquewhite;
@@ -99,15 +102,15 @@ body {
 }
 
 #infra_aspecto{
-    width: 43%;
+    width: 100%;
 }
 
 #infra_desc{
-    width: 43%;
+    width: 100%;
 }
 
 #infra_beneficios{
-    width: 43%;
+    width: 100%;
 }
 
 
