--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -175,7 +175,7 @@ footer{
     }
 
     #banner{
-        height: 10%;
+        height: 13%;
     }
     
      
@@ -209,8 +209,9 @@ footer{
         height: 20%;
     }
 
-    .cerrar-sesion{
-        height: 6%;
+    .cerrar-sesion {
+        width: 130px;
+        height: 40px;
     }
 
     .banner2{
@@ -232,6 +233,10 @@ footer{
         height: 100% !important;
     }
 
+    .cerrar-sesion {
+        width: 130px;
+        height: 40px;
+    }
 
     footer{
         height: 10%;
@@ -249,6 +254,11 @@ footer{
         display: none !important;
     }
 
+    .cerrar-sesion {
+        width: 130px;
+        height: 40px;
+    }
+
     footer{
         height: 10%;
     }
@@ -262,6 +272,11 @@ footer{
 
     html, body {
         height: 110% !important;
+    }
+
+    .cerrar-sesion {
+        width: 130px;
+        height: 40px;
     }
 
     footer{
@@ -294,7 +309,12 @@ footer{
     }
 
     html, body {
-        height: 110% !important;
+        height: 100% !important;
+    }
+
+    .cerrar-sesion {
+        width: 130px;
+        height: 40px;
     }
 
     footer{
@@ -354,11 +374,11 @@ footer{
     }
 
     footer{
-        height: 11.5%;
+        height: 15%;
     }
     
     html, body {
-        height: 128% !important;
+        height: 118% !important;
     }
     
 }
