Eliminacion de important

--- a/mantenimientos/Editar_registro/estilos.css
+++ b/mantenimientos/Editar_registro/estilos.css
@@ -164,7 +164,7 @@ th{
 
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
 
 
@@ -221,7 +221,7 @@ th{
     }
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
     
 
@@ -242,7 +242,7 @@ th{
 
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
     
      
@@ -262,7 +262,7 @@ th{
 
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
 
     td{
@@ -318,7 +318,7 @@ th{
 
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
     
     footer{
@@ -333,7 +333,7 @@ th{
     }
 
     html, body {
-        height: 100% !important;
+        height: 100%;
     }
 
     #banner{
@@ -412,7 +412,7 @@ th{
     }
 
     html, body {
-        height: 130% !important;
+        height: 130%;
     }
 
     footer{
