Sombreo de registro eliminado

--- a/mantenimientos/Calendario/estilos.css
+++ b/mantenimientos/Calendario/estilos.css
@@ -150,6 +150,10 @@ th{
 .inactivo{
     background-color: antiquewhite;
 }
+
+.activo{
+    background-color: #f8f9fa;
+}
 /*--------------------------------------------*/
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 
